errors.txt
D:\LeMinhPhat\UIT\3.junior_year\semester1\SE114\Project\film-space-uit\app\src\main\java\com\example\filmspace_mobile\ui\setting\ChangePasswordActivity.java:216: error: cannot find symbol
                            sessionManager.logout();
                                          ^
  symbol:   method logout()
  location: variable sessionManager of type UserSessionManager
Explain with AI

D:\LeMinhPhat\UIT\3.junior_year\semester1\SE114\Project\film-space-uit\app\src\main\java\com\example\filmspace_mobile\ui\auth\CreateNewPasswordFragment\CreateNewPasswordFragment.java:
uses or overrides a deprecated API.
Recompile with -Xlint:deprecation for details.
